--- a/index.html
+++ b/index.html
@@ -1,43 +1,10 @@
 <!DOCTYPE html>
 <html style="background-color: violet;" >
 
-<style>
-
-  .sidenav {
-  height: 100%;
-  width: 320px;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  background-color: yellow;
-  overflow-x: hidden;
-  padding-top: 20px;
-}
 
 
-.main {
-  margin-left: 320px; /* Same as the width of the sidenav */
-/*  font-size: 28px;  */ /* Increased text to enable scrolling */
-  padding: 0px 10px;
-}
+<link rel="stylesheet" href="file:///home/cynthia/front_end/style.css">
 
-
-h1 {
-  font-size:128px;
-  text-align:center;
-  font-family:arial,helvetica;
-  border-style: solid;
-  border-color: coral;
-}
-
-h2 {
-  
-  border-style: solid;
-  border-color: coral;
-}
-
-</style>
 
   <head>
     <meta charset="utf-8">
@@ -48,10 +15,14 @@ h2 {
 
 
  <div class="sidenav">
-  <h2>Here is some stuff that appears at the side.</h2>
-  <p>Note that it's supposed to stay put whereever we go on the page.</p>
- 
-  
+  <h2>Links for Cynthia</h2>
+  <div class="smallpara">
+  <a href="file:///home/cynthia/notes.html" target="_blank">Notes to Self</a><br>
+ <a href="http://theodinproject.com" target="_blank">The Odin Project</a><br>
+ <a href="http://google.ca" target="_blank">Google</a></br>
+ <a href="http://capitalone.ca" target="_blank">Capital One</a><br>
+ <a href="http://coastcapitalsavings.com" target="_blank">Coast Capital</a><br>
+  </div>
 </div>
 
 <div class="main">
@@ -59,9 +30,13 @@ h2 {
     <h1 >Cynthia J. Christie
     <img src="images/2021-06-04-132941.jpg" alt="Picture of me" width="200" height="150"></h1>
     <h2>This is the place where I'm going to be developing and practicing my front end skills.</h2>
-    <p><img src="images/ht_BuildaSandbox-hero.jpeg" alt="Picture of sandbox">
+    <p>
+ <div class="poststamp">  <p> <img src="images/ht_BuildaSandbox-hero.jpeg" alt="Picture of sandbox" width="125" height="100"></p><p>This is a sandbox.</div><div class="regpara"><p>
     And here is where we talk about whatever we're going to talk about.<br><br>
-    This isn't so hard.</p>
+    This isn't so hard.<br><br</p><p>Next I'm going to ramble on and on about basically nothing because I have to have some text to go around this picture to see if it's doing what I want.  Previously, there was either a huge unused space where there should have been a text block, or else all this text would be superimposed on the picture, which is not what I want.  Let's see how this is!</p>
+    
+    
+    </div>
   </body>
   </div>
 </html>
